# blastoff

./: LICENSE  README.md  docker-compose.sh  docker-compose.test.yml  docker-compose.yml
api-connection/src/: api_connector.py  dto.py  get_api_data.py  launch_data.py
api_connection/: README.md  pyproject.toml
api_connection/docs/: readme.md
api_connection/src/: api_connector.py  dto.py  get_api_data.py  launch_data.py
api_connection/tests/: test_dto.py  test_launch_data.py
blastoff_app/: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup_mysql.sh
blastoff_app/app/: authentication.py  database.py  dependencies.py  env.py  get_data.py  lifespan.py  main.py  models.py  redis.py  security.py  settings.py
blastoff_app/app/api_connection/: README.md  api_connector.py  dto.py  get_api_data.py  launch_data.py  pytest.ini
blastoff_app/app/api_connection/src/: api_connector.py  dto.py  get_api_data.py  launch_data.py
blastoff_app/app/api_connection/tests/: test_dto.py  test_launch_data.py
blastoff_app/app/config/: __init__.py  cors.py  sentry.py
blastoff_app/app/crud/: __init__.py  agency.py  comment.py  favourite_agency.py  favourite_launch.py  launch.py  program.py  rocket.py  site.py  user.py
blastoff_app/app/emails/: __init__.py  email_builder.py  email_notifier.py  emails_notificator.py  smtp_client.py
blastoff_app/app/models/: __init__.py  agency.py  comment.py  favourite_agency.py  favourite_launch.py  launch.py  program.py  rocket.py  site.py  user.py
blastoff_app/app/routers/: __init__.py  agency.py  comment.py  favourite_agency.py  favourite_launch.py  launch.py  program.py  rocket.py  site.py  user.py
blastoff_app/app/schemas/: __init__.py  __intit__.py  agency.py  comment.py  favourite_agency.py  favourite_launch.py  launch.py  program.py  rocket.py  site.py  user.py
blastoff_app/docs/: index.md
blastoff_app/docs/scripts/: gen_ref_pages.py
blastoff_app/migrations/: README.md  env.py
blastoff_app/migrations/versions/: 1df2e7911c04_migration_v3.py  7fbd50527ad6_migration_v2.py  a78d365e0c04_migration_v1.py
blastoff_app/tests/: conftest.py  test_agencies.py  test_dto.py  test_launch_data.py  test_launches.py  test_programs.py  test_rockets.py  test_sites.py  test_users.py
frontend/: .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  constants.ts  index.css  index.tsx  main.tsx
frontend/src/components/: Error.tsx  FavouriteAgencyDisplay.tsx  FavouriteLaunchDisplay.tsx  FormField.tsx  LaunchCountdown.tsx  Loading.tsx  Navbar.tsx  NotFound.tsx  ProtectedRoute.tsx  ScrollToTop.tsx  StyledLink.tsx  SubmitButton.tsx  ThemeSwitch.tsx  Tooltip.tsx
frontend/src/context/: CommentSectionContext.tsx  LaunchContext.tsx  MissionContext.tsx  RocketContext.tsx  SessionContext.tsx  (+1 more)
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/components/: gradient-text.tsx  loading-screen.tsx  not-found-screen.tsx  themed-text.tsx  themed-view.tsx  top-bar.tsx
mobile/constants/: theme.ts  ui.ts
mobile/hooks/: use-theme-color.ts
mobile/lib/: api-client.ts  query-client.ts
mobile/utils/: remove-duplicates.ts  sort-by-nullable-number.ts  with-alpha.ts
(+101 files in other folders)
