[tool.poetry]
name = "api-connection"
version = "0.1.0"
description = "Module enabling communication with external api"
authors = ["Adrian Murawski <adrianmurawski79@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.122.4"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
