[project]
name = "blastoff_app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zprp24z team 7", email = "lukwoj27@gmail.com"},
]
dependencies = [
    "aiomysql==0.2.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "bcrypt==3.2.0",
    "cffi==1.17.1",
    "click==8.1.7",
    "cryptography==43.0.3",
    "fastapi==0.115.4",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "passlib==1.7.4",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "PyMySQL==1.1.1",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.36",
    "starlette==0.41.2",
    "typing-extensions==4.12.2",
    "uvicorn==0.32.0",
    "pip==24.3.1",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
black = "black ."
isort = "isort ."
format = {composite = ["black", "isort"]}
